# OCRmyPDF-PaddlePaddle

./: .gitignore  pyproject.toml
ocrmypdf_paddlepaddle/: __init__.py  config.py  logging.py
ocrmypdf_paddlepaddle/core/: engine.py  models.py
ocrmypdf_paddlepaddle/generators/: pdf.py
